[package]
name = "cuda-weather"
version = "0.1.0"
edition = "2021"
description = "Environmental awareness with hazard alerts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-weather"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

